--- a/education.tex
+++ b/education.tex
@@ -6,7 +6,7 @@
 {\bf About the ACMS program}
 
 The ACMS {\em (Applied and Computational Mathematical Sciences)} was
-introduced in \mmp{fill} as a joint undergraduate program between the
+introduced in 1998 as a joint undergraduate program between the
 departments of Applied Mathematics, Computer Science and Engineering,
 Mathematics and Statistics, among others.
 
@@ -20,23 +20,21 @@ specialization in the mathematical sciences ({\em Discrete Math and
   Algorithms, Operations Research, Scientific Computing and Numerical
   Analysis, and Statistics}). 
 
-During the recent academic year, the enrollment in ACMS has been at
-about 200 (what? student/year?), divided as follows: 
-
-
-It is the Statistics track of ACMS that we are aiming to tranform. Currently, this track contains, in addition to the core courses (43 credits), the followin
-
+It is the Statistics track of ACMS that we are aiming to
+tranform. Currently, this track contains, in addition to the core
+courses (43 credits), the following:
+\\
 {\bf Option Core (37 credits)}
-\bit
+\bits
     \item PHYS 121, 122, 123 (5,5,5) (can be replaced by courses in another application area)
     \item STAT 302: (2) Statistical Software and Its Applications R
     \item STAT 340: (4) Introduction to Probability and Mathematical Statistics
     \item STAT 341,342: (4,4) Introduction to Probability and Statistical Inference I,II
     \item STAT 421: (4) Applied Statistics and Experiment Design
     \item STAT 423: (4) Applied Regression and Analysis of Variance
-\eit
+\eits
 {\bf Option Electives (10 credits)}
-\bit
+\bits
     \item MATH/STAT 396: Probability III
     \item MATH/STAT 491, 492: Introduction to Stochastic Processes
 \item[]
@@ -53,36 +51,50 @@ It is the Statistics track of ACMS that we are aiming to tranform. Currently, th
     \item STAT 428: (4) Multivariate Analysis for the Social Sciences
     \item GEOG 426: (5) Quantitative Methods in Geography
     \item QMETH 528: (4) Survey Sampling Applications
-\eit
+\eits
 The program web page recommends that ``[this track] is ideally suited as a second major for students with a primary focus in the biological sciences, earth sciences, social sciences, engineering, or management science.''
 
 De facto, the track curricullum differs little, most notably by the
 presence of the computer programming class CSE 142, from the
 ``standard'' Statistics major. Another notable difference from the
-statistics major is STAT 390, a class for non-majors. 
+statistics major is STAT 390, a class open non-majors from all across UW.
 
-To note also that the enrollment in the ACMS Statistics track was
-\mmp{fill} in the last years, while the enrollment in the Statistics
-major is at an all times high, with \mmp{fill}.
+{\bf Enrollment} The ACMS major is competitive, with the number of
+majors capped at about 200.  During the recent academic years,
+graduation numbers have passed 100 student per year, with the current
+enrollment at 147\footnote{Complete breakdown of ACMS graduation
+  numbers from 1998 on are in the Supplementary material.}.  Of these,
+the Statistics track accounts for 4 students currently enrolled (none
+as double majors), and of 2 to 6 students graduated in each of the
+last 5 years. In the same time, enrollment in the Statistics major is
+at an all times high, with \mmp{fill} of which XX women.
 
-We will transform this track into a Computationally Minded Statistics
-Major. In other words, we do not aim to produce scientists who also
-know statistics (which can be well served by the other tracks of ACMS)
-but full-fledged statisticians who can function autonomously in the
+\subsection{Transforming the ACMS track}
+We will transform the ACMS Statistics track into a virtually new
+major, a ``computationally minded Statistics major''. In other words,
+we will not aim to produce scientists who also know statistics (which
+can be well served by Statistics minor and other tracks of ACMS) but
+full-fledged statisticians who can function autonomously in the
 cyberworld.
 
- There are several motivating factors:
+There are several motivating factors:
 \bit
-\item Interest in statistics is at an all times high, as witnessed by our enrollment numbers. We expect that the ACMS Statistics track will be as well.
-\item The role of the statistician as data analyst has become both
-  more central, and more demanding. As more data analysis and more
-  decisions based on it are being shifted from humans to computers,
-  statistics is called upon to design and validate the procedures used
-  to take these decisions. Thus, the statician's importance in a much
-  wider range of human activities, be they science or buisness. But
-  the statistician's responsability is comensurately growins, as she
-  needs to master the skills required by cyber-enabled science and
-  data analysis. 
+\item Interest in statistics is at an all times high, as witnessed by
+  our enrollment numbers. We expect that the ACMS Statistics track
+  will reach similar enrollment numbers. Note that at the current
+  enrollment in the other tracks, the total ACMS enrollment will be
+  near the 200 level.
+
+\item \mmp{the next items could be shortened if needed} The role of
+  the statistician as data analyst has become both more central, and
+  more demanding. As more data analysis and more decisions based on it
+  are being shifted from humans to computers, statistics is called
+  upon to design and validate the procedures used to take these
+  decisions. Thus, the statician's importance in a much wider range of
+  human activities, be they science or buisness. But the
+  statistician's responsability is comensurately growins, as she needs
+  to master the skills required by cyber-enabled science and data
+  analysis.
 \item These skills include are not limited to computer using and
   programming skills. The nature of statistical analyses itself is
   affected \mmp{get some citations} as it has been long
@@ -101,6 +113,26 @@ cyberworld.
 \item This proposal is in the spirit of the ACMS original mission,
   bringing this part up to speed with the demands of the coming decade.
 \eit
+{\bf What we want to do}
+
+\bit
+\item To transform the ACMS Statistics track into a computer intensive statistics major. 
+  \bit
+   \item Stage 1: Design and introduce two new courses \statcl, \astrocl as {\em electives} in the track.
+   \item Stage 2: Redesign the track: move \statcl, Stochastic Processes STAT 481, 482 into the core. As this will no longer be regarded as a second major for science students, we will make room by removing the PHYS 121, 122, 123 courses (15 credits) from it. Reorganizing the electives into two groups: group I (math/stat electives) and group II computing and science electives. 
+   \item Stage 3: ?? Making these courses accessible to mathematics majors, via William Steins python programming course. 
+  \eit
+\item To develop a software infrastructure for teaching \cdse~ in
+  Python. This will include data sets, data analysis problems,
+  software libraries, and course modules built around the data and
+  problems. This infrastructure will be made available via the
+  web. Due to its modular structure, it will be useable as needed by
+  instructors in other courses.
+\item To organize an Undergraduate Research Seminar. In this seminar, unlike the ACMS 
+\item To organize a 3 day workshop for instructors in statistics and related fields that will teach the basics of using our sofware infrastructure and will impart our experience in the project.
+\eit
+
+
 
 {\bf Why this particular approach} Currently, computer education is
 assured primarily through two core courses, CSE 142, 143
@@ -121,26 +153,6 @@ quickly under our guidance.
 
 \mmp{ to continue after the proposal more fleshed out}
 
-{\bf What we want to do}
-
-\bit
-\item To transform the ACMS Statistics track into a computer intensive statistics major. 
-  \bit
-   \item Stage 1: Design and introduce two new courses STAT 391, ASTRO 598 as {\em electives} in the track.
-   \item Stage 2: Redesign the track: move STAT 391, Stochastic Processes STAT 481, 482 into the core. As this will no longer be regarded as a second major for science students, we will make room by removing the PHYS 121, 122, 123 courses (15 credits) from it. Reorganizing the electives into two groups: group I (math/stat electives) and group II computing and science electives. 
-   \item Stage 3: ?? Making these courses accessible to mathematics majors, via William Steins python programming course. 
-  \eit
-\item To develop a software infrastructure for teaching \cdse~ in
-  Python. This will include data sets, data analysis problems,
-  software libraries, and course modules built around the data and
-  problems. This infrastructure will be made available via the
-  web. Due to its modular structure, it will be useable as needed by
-  instructors in other courses.
-\item To organize an Undergraduate Research Seminar. In this seminar, unlike the ACMS 
-\item To organize a 3 day workshop for instructors in statistics and related fields that will teach the basics of using our sofware infrastructure and will impart our experience in the project.
-\eit
-
-
 
 \comment{
 The Program Core is a set of courses totaling 43 credits which are generally required for all ACMS majors. Exceptions are specifically pointed out in the descriptions of the various options. The core courses will provide a solid foundation from which students may pursue any of the approved degree pathways within the Program. }
@@ -151,13 +163,6 @@ The Program Core is a set of courses totaling 43 credits which are generally req
 
  
 \comment{
-\section{Intro/Motivation/What we want}
-
-\subsection{The current ACMS program}
-
-the courses
-
-next steps: vision of ACMS 
 
 next steps: other math majors?, new certificates, programs
 
@@ -177,20 +182,17 @@ Astro involvement
 How does UW support this plan:
 
 
-\section{PI involvement and experience}
-
-\subsection{Postdoc involvement}
 
 }%end comment
 
-\section{Description of the courses}
+\subsection{Description of the courses}
 \label{sec:course-descr}
 
-\bit
-\item STAT 391 ``Probability and Statistics for Computer Science''
+\bits
+\item \statcl ``Probability and Statistics for Computer Science''
 ``Computational Statistical Modeling and Machine Learning''
-\item ASTRO 497 ``Data Intensive Astronomy'' 
-\eit 
+\item \astrocl ``Data Intensive Astronomy'' 
+\eits
 These courses aims are explicitly to (1) to give students a hands on experience, through programming, and performing real data analyses on a computer, with the computational aspects of 
 statistical modeling in general, and (2) to introduce them to the  machine learning methodology in particular, with specific attention to the issues of big data.
 
@@ -203,11 +205,8 @@ engineering data. In this sense, the overlap has not been avoided; so that
 the student can gain a new, computational perspective, on areas
 already studied from a more theoretical point of view. 
 
-
-\subsection{STAT 535 and ASTRO 397 Syllabi}
-
 \bit
-\item STAT 391 Draft Syllabus\\
+\item \statcl Draft Syllabus\\
 - a review of the concept of likelihood and Max Likelihood estimation (cases in which MLE has no closed form, gradient ascent/Newton estimation of MLE)\\
 - a review of basic probability models with focus on ML estimation of these models, supported heavily by simulation (e.g demonstrating gaussianity of MLE for certain models, and non-gaussianity for other models, including Zipf's law type distributions)\\
 - models for statistical prediction, with focus on classification\\
@@ -216,122 +215,10 @@ already studied from a more theoretical point of view.
 - examples real applications from engineering and sciences (image analysis, information retrieval, etc.)
 
 
-\item[]{\bf Learning goals for STAT 391} Ability to perform computationally intense/authomated and efficient data analysis. Ability to combine existing tools and libraries with programming in a general purpose language (python). 
+\item[]{\bf Learning goals for \statcl} Ability to perform computationally intense/authomated and efficient data analysis. Ability to combine existing tools and libraries with programming in a general purpose language (python). 
 Working knowledge of the most important/main machine learning tools and methods, as well as their probabilistic interpretation. Understanding of the practical implications of theoretical results like independence, overfitting, consistency of an estimator. 
 
-\item ASTRO 487 Draft Syllabus\\
-Computational Challenges in data-intensive astronomy and astrophysics:
--data types and data management systems
--types of computational problems and strategies for speeding them up 
-- data visualization challenges
-- selection effects and truncated/censored data in astronomical context 
-
-Exploratory techniques and searching for structure (e.g non-parametric density estimation, finding clusters - focus on non-parametrics and large data)
-
-Dimensionality reduction\\
-- review of principal component analysis in a large data context
-- non-negative matrix factorization 
-- independent component analysis and projection pursuit 
-
-Regression and model fitting for large data
-\comment{ (non-linear and kernel regression, methods for handling heteroscedastic and non-Gaussian errors, Gaussian processes)}
-
-Basics of time series analysis
-\comment{
-6) Time series analysis in astronomy
-- main concepts and tools for time series analysis
-- analysis of periodic time series 
-- temporally localized signals
-- analysis of stochastic processes}
-
-- applications using real data from large sky surveys
-
-Adoption and development of cross-disciplinary tools (e.g. numerical 
-algorithms, visualization methods, data-human interaction) in the context
-of big data, astronomical or otherwise \mmp{fill in exaamples, why these...}
-\eit
-
-{\bf Learning goals for ASTRO 597}
-
-
-
-\subsection{Format and student experience}
-
-The courses will consist of lectures, homework assignments, 1--2
-miniprojects, and a final exam. The TA will hold recitations; about
-half of these will be in a (virtual) computer lab environment. 
-
-{\bf The Computer Lab recitations} will offer support for learning Python, as well as specific data analysis tools \mmp{examples: libraries, tools, from the book}   The student will practice working in groups, the technique of extreme programming, using a debugger.
-
-Another experience in the computer lab will be actual data analysis and visualization using the tools. 
-
-\mmp{the postdoc will train/supervise the TA's for both courses}
-
-{\bf Homework assignments} There will be 4-5 weekly homework assignments. They will contain concept problems, algorithms problems, programming assignments, and data analysis assignments.
-
-
-\mmp{{\bf TODO:} credits for each course\\
- put in some pictures (from 391..)\\
- sample student evaluations\\
- why python\\
-what support we have for python\\
-why astronomy good testbed
-}
-
-A note on the overlap between STAT 391 and ASTRO 497: Where the two
-courses have overlapping topics, ASTRO will consider the big data case
-explicitly, while STAT 391 will be considering the connections between
-statistical theory and computation. STAT 391 will support more basic
-Python, while ASTRO 597 will support Python libraries for big data.
-
-{\bf Lectures} We will blend in computer demos, class question and answer, and group discussion with the standard lecture format. 
-
-{\bf Textbooks} \mmp{TBW}
-
-
-
-
-\subsection{Precursors (and about the PI's-- here or later?)}
-\label{sec:precursors}
-
-A previous version of {\bf STAT 391} was developed and taught by \meila for 11 years as ``Probability and Statistics for Computer Science''.
-
-Recently, (i.e. 2010) CSE introduced their own introduction to probability and statistics, CSE 312.  While STAT 391 continues to be taught and recommended as an elective, it was clear that the course could not remain in its original form.
-Therefore, in Spring 2013, the PI \meila with Hoyt Koepke, revised the course, having in mind that
-\bit
-\item the audience was now literate in statistics and probability
-\item the course could now be opened to a larger audience 
-\eit
-I opted to replace the introductory material with more advanced topics, and for these I chose a set of basic machine learning topics. I also introduced more substantial data analysis assignments. These changes were implemented by Hoyt Kopke, who taught the class. The course web page is at {\tt }. The student feedback to this pilot experiment was very encouraging. \mmp{specifics: how many students, what depts, they liked being made to learn python, loved the projects too, level was demanding}
-
-\meila with Connoly co-taught an extremely well received course at CMU in 1999-200. \mmp{fill in 1-2 more sentences}
-
-{\bf ASTRO 497} \mmp{A,Z say something} 
-
-\subsection{Short term: how/where will these classes fit}
-\mmp{some of this needs revision}
-\bit
-\item These courses fit very well with the original goal and mission of the  ACMS program. The revision we propose will take it to a level corresponding to the current state
-\item Crosscultural diversity: ACMS students will share the class with CS majors (STAT 391) or Astronomy and Physics majors
-\item General increased interest from employers in computational statistics, big data, machine learning, together or separately. We expect that ACMS students, too, will be well served by these courses.
-
-\item[]{\bf Links}
-\item STAT 391 Spring 2013 web site {\tt http://www.stat.washington.edu/courses/stat391/spring13/}
-\item AstroML Textbook web site {\tt http://www.amazon.com/Data-Mining-Machine-Learning-Astronomy/dp/0691151695}
-\eit
-
-
-\mmp{here starts the stuff from plan.tex}
-
-
-
-\subsection{ASTR 598} 
-
-Copied text from that email, which was copied from our book, to see
-how many pages it would take...
-
-\subsubsection{Motivation for Astr 598}
-
+\item{Motivation for \astrocl} \mmp{shorter,more to the point of grant}
 Astronomy and astrophysics are witnessing dramatic increases in data volume 
 as detectors, telescopes, and computers become ever more powerful. During the 
 last decade, sky surveys across the electromagnetic spectrum have collected 
@@ -362,67 +249,91 @@ evaluate the techniques, and adapt them to their own fields of interest. We chos
 use Python, a powerful and flexible programming language that is quickly becoming 
 a standard in data-intensive sciences (and elsewhere). 
 
-The target audience for our course includes undergraduate students with scientific 
-or engineering background, but it is likely that graduate students
-would benefit from it too. Familiarity with calculus and other basic mathematical 
-techniques will be assumed, but no extensive prior knowledge in statistics will be 
-required. 
+The target audience for our course includes undergraduate students
+with scientific or engineering background, but it is likely that
+graduate students would benefit from it too. Familiarity with calculus
+and other basic mathematical techniques will be assumed, but no
+extensive prior knowledge in statistics will be required.
 
-The course outline: 
+\item \astrocl~ Draft Syllabus\\
+Computational Challenges in data-intensive astronomy and astrophysics:
+-data types and data management systems
+-types of computational problems and strategies for speeding them up 
+- data visualization challenges
+- selection effects and truncated/censored data in astronomical context 
 
-\begin{enumerate} 
-\item Computational Challenges in data-intensive astronomy and astrophysics
-\begin{itemize}
-\item  data types and data management systems 
-\item  analysis of algorithmic efficiency
-\item  types of computational problems and strategies for speeding them up 
-\item  data visualization challenges
-\item  selection effects and truncated/censored data in astronomical context 
-\end{itemize}
-\item Searching for structure in astronomical point data
-\begin{itemize}
-\item  non-parametric density estimation
-\item  nearest-neighbor density estimation
-\item  parametric density estimation
-\item  finding clusters in data 
-\item  correlation functions 
-\end{itemize} 
-\item Dimensionality reduction
-\begin{itemize}
-\item  principal component analysis in astronomical context
-\item  non-negative matrix factorization 
-\item  independent component analysis and projection pursuit 
-\item  manifold learning
-\end{itemize} 
-\item Regression and model fitting
-\begin{itemize}
-\item  regresion for linear models
-\item  non-linear regression
-\item  kernel and principal component regression
-\item  methods for handling heteroscedastic and non-Gaussian errors 
-\item  Gaussian processes
-\item  overfitting, underfitting and cross-validation
-\end{itemize} 
-\item Classification 
-\begin{itemize}
-\item  generative classification methods
-\item  discriminative classification method 
-\item  evaluation and comparison of classifiers: ROCcurves 
-\end{itemize} 
-\item Time series analysis in astronomy
-\begin{itemize}
-\item  main concepts and tools for time series analysis
-\item  analysis of periodic time series 
-\item  temporally localized signals
-\item  analysis of stochastic processes
-\end{itemize} 
-\end{enumerate} 
+Exploratory techniques and searching for structure (e.g non-parametric density estimation, finding clusters - focus on non-parametrics and large data)
+
+Dimensionality reduction\\
+- review of principal component analysis in a large data context
+- non-negative matrix factorization 
+- independent component analysis and projection pursuit 
+
+Regression and model fitting for large data
+
+Basics of time series analysis
+
+- applications using real data from large sky surveys
+
+Adoption and development of cross-disciplinary tools (e.g. numerical 
+algorithms, visualization methods, data-human interaction) in the context
+of big data, astronomical or otherwise \mmp{fill in exaamples, why these...}
+\eit
+
+{\bf Learning goals for \astrocl}
+- familiarity with drivers for and accomplishments of modern astronomical surveys\\
+- ability to perform computationally intense/automated and efficient data analysis\\
+- ability to combine existing tools and libraries with programming in a general purpose language (Python)\\
+- working knowledge of the most important/main machine learning tools and
+   methods, as well as their probabilistic interpretation// 
+- help to develop a diverse STEM workforce//
+ 
 
 
-We will use textbook {\it ``Statistics, Data Mining, and Machine Learning in Astronomy:
-A Practical Python Guide for the Analysis of Survey Data''} (Princeton Series in Modern 
-Observational Astronomy, in press) coauthored by the Co-PIs on this prooposal. 
+{\bf Textbook} {\it ``Statistics, Data Mining, and Machine Learning in
+  Astronomy: A Practical Python Guide for the Analysis of Survey
+  Data''} (Princeton Series in Modern Observational Astronomy, in
+press) coauthored by the Co-PIs on this prooposal.
 
+
+\subsection{Format and student experience}
+
+The courses will consist of lectures, homework assignments, 1--2
+miniprojects, and a final exam. The TA will hold recitations; about
+half of these will be in a (virtual) computer lab environment. 
+
+{\bf The Computer Lab recitations} will offer support for learning Python, as well as specific data analysis tools \mmp{examples: libraries, tools, from the book}   The student will practice working in groups, the technique of extreme programming, using a debugger.
+
+Another experience in the computer lab will be actual data analysis and visualization using the tools. 
+
+\mmp{the postdoc will train/supervise the TA's for both courses}
+
+{\bf Homework assignments} There will be 4-5 weekly homework assignments. They will contain concept problems, algorithms problems, programming assignments, and data analysis assignments.
+
+
+\mmp{{\bf TODO:} credits for each course\\
+ put in some pictures (from 391..)\\
+ sample student evaluations\\
+ why python\\
+what support we have for python\\
+why astronomy good testbed
+}
+
+A note on the overlap between \statcl~ and \astrocl: Where the two
+courses have overlapping topics, \astrocl~ will consider the big data case
+explicitly, while \statcl~ will be considering the connections between
+statistical theory and computation. \statcl~ will support more basic
+Python, while \astrocl~ will support Python libraries for big data.
+
+{\bf Lectures} We will blend in computer demos, class question and answer, and group discussion with the standard lecture format. 
+
+{\bf Textbooks} Unfortunately, there is no single textbook one can
+assign for this course. We will rely partly on \meila's previously
+developed course notes for {\it ``Probability and Statistics for
+  Computer Science''}, a computatonally minded introductory course,
+partly on new course notes to be developed by \meila specifically for
+this more advanced course, and partly on the textbook of \astrocl~
+which will provide among others the Python exercises. We are also considering \cite{} Daniela's machine learning book.
 
 
 \subsection{Python Packages} 
@@ -434,14 +345,14 @@ Observational Astronomy, in press) coauthored by the Co-PIs on this prooposal.
 \vskip -2.0in
 \caption{We will leverage all the modern python tools available in {\it astroML} and
 other packages, including a large number of practical data-intensive exercises developed to
-support textbook that will be used with the proposed ASTR 598 course.} 
+support textbook that will be used with the proposed \astrocl~ course.} 
 \label{Fig:astroML}
 \end{figure*}
 
 
 We will leverage all the publicly available modern python tools. In particular, seminar work will be 
 built around the {\it astroML} package (available from http://www.astroml.org) that was developed 
-to support textbook to be used with the proposed ASTR 598 course. {\it astroML} is a python module 
+to support textbook to be used with the proposed \astrocl course. {\it astroML} is a python module 
 for machine learning and data mining built on {\it numpy}, {\it scipy}, {\it scikit-learn}, and {\it matplotlib}, 
 and distributed under the 3-clause BSD license. It contains a growing library of statistical and machine 
 learning routines for analyzing astronomical data in python, loaders for several open astronomical datasets, 
@@ -482,8 +393,58 @@ components is technique dependent.}
 \label{Fig:astroML2}
 \end{figure*}
 
+\subsection{What we are building on}
+\label{sec:precursors}
 
-\mmp{Budget was here. Look for it in the original plan.tex}
+\meila~ has extensive previous experience teaching computational
+statistics courses at all levels. In particular, she developed the
+course ``Probability and Statistics for Computer Science'' an
+introductory course aimed at computer science majors, under the same
+course number \statcl. This has been taught for 11 years at full
+enrollment (50 students). From it, what can be transferred to teaching
+computing and algorithms to young statisticians? The power of hands on
+experience with data, through programs one understands, the
+combination of algorithmics and statistics that comes into play for
+large, high-dimensional data sets \mmp{clean this up}
+
+(Recently, starting 2011, CSE created their own introduction to
+probability and statistics, {\sc CSE 312}. Thus it is clear that
+\statcl~ can not serve its original purpose and audience.)
+\mmp{keep this?}
+Therefore, in Spring 2013, the PI \meila with Hoyt Koepke, revised the
+course, having in mind that \bit
+\item the audience was now literate in statistics and probability
+\item the course could now be opened to a larger audience 
+\eit
+I opted to replace the introductory material with more advanced topics, and for these I chose a set of basic machine learning topics. I also introduced more substantial data analysis assignments. These changes were implemented by Hoyt Kopke, who taught the class. The course web page is at {\tt }. The student feedback to this pilot experiment was very encouraging. \mmp{specifics: how many students, what depts, they liked being made to learn python, loved the projects too, level was demanding}
+
+Ivezic, Connolly, and Van der Plaas \ldots \\
+\meila with Connoly co-taught an extremely well received course at CMU
+in 1999-2000, ``Computational Statistics of Multi-Dimensional
+Scientific Databases'', which reunited students from Statistics,
+Computer Science and Astronomy, as well as faculty from these
+departments.
+
+
+
+\subsection{Short term: how/where will these classes fit}
+\mmp{some of this needs revision}
+\bit
+\item These courses fit very well with the original goal and mission of the  ACMS program. The revision we propose will take it to a level corresponding to the current state
+\item Crosscultural diversity: ACMS students will share the class with CS majors (\statcl) or Astronomy and Physics majors
+\item General increased interest from employers in computational statistics, big data, machine learning, together or separately. We expect that ACMS students, too, will be well served by these courses.
+
+\item[]{\bf Links}
+\item \statcl Spring 2013 web site {\tt http://www.stat.washington.edu/courses/stat391/spring13/}
+\item AstroML Textbook web site {\tt http://www.amazon.com/Data-Mining-Machine-Learning-Astronomy/dp/0691151695}
+\eit
+
+
+
+
+
+
+
 
 
 
