--- a/proposal.tex
+++ b/proposal.tex
@@ -20,13 +20,29 @@
 \hyphenation{para-met-ri-zed Qua-sars cross-vali-da-tion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Commands added by MMP 
+\newenvironment{itemize*}{
+\begin{itemize}
+\setlength{\parskip}{0em}
+\setlength{\topskip}{0em}
+}
+{\end{itemize}}
+
+\newenvironment{enumerate*}{
+\begin{enumerate}
+\setlength{\parskip}{0em}
+\setlength{\topskip}{0em}
+}
+{\end{enumerate}}
 
 \newcommand{\comment}[1]{}
 \newcommand{\mmp}[1]{\textcolor{red}{#1}}
 
 \newcommand{\meila}{Meil\u{a}}
 \newcommand{\cdse}{CDS\&E}
+
 \newcommand{\astroml}{{\em AstroML}}
+\newcommand{\astrocl}{{\sc ASTR 497}}
+\newcommand{\statcl}{{\sc STAT 391}}
 
 \newcommand{\bit}{\begin{itemize}}
 \newcommand{\eit}{\end{itemize}}
